--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
 body {
     text-align: center;
+    background-color: green;
+}
+
+h1 {
+  color: #f35626;
+  background-image: -webkit-linear-gradient(92deg,#f35626,#feab3a);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-animation: hue 60s infinite linear;
 }
