--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,7 @@ body {
     background-color: green;
 }
 
-h1 {
-  color: #f35626;
-  background-image: -webkit-linear-gradient(92deg,#f35626,#feab3a);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -webkit-animation: hue 60s infinite linear;
+.header {
+  color: #fff;
+  font-family: 'Press Start 2P', cursive;
 }
